Improve tests for ReplacementFinderService